--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "ts-node scripts/build.ts"
   },
   "devDependencies": {
+    "@types/cross-spawn": "6.0.2",
     "@types/jest": "26.0.23",
     "@types/node": "15.0.2",
     "@typescript-eslint/eslint-plugin": "4.23.0",
@@ -25,6 +26,7 @@
     "typescript": "4.2.4"
   },
   "dependencies": {
+    "cross-spawn": "^7.0.3",
     "tiny-decoders": "^6.0.0"
   }
 }
