Include package.json in node_modules cache

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: internal-node_modules-ubuntu-latest-16.x-${{ hashFiles('package-lock.json') }}
+          key: internal-node_modules-ubuntu-latest-16.x-${{ hashFiles('package.json', 'package-lock.json') }}
       - name: Internal npm ci
         if: steps.internal-cache-node_modules.outputs.cache-hit != 'true'
         run: npm ci
@@ -41,7 +41,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: example/node_modules
-          key: node_modules-${{ hashFiles('example/package-lock.json') }}
+          key: node_modules-${{ hashFiles('example/package.json', 'example/package-lock.json') }}
 
       - name: Cache ~/.elm
         uses: actions/cache@v2
