--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "ts-node scripts/Build.ts"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "8.2.1",
     "@types/cross-spawn": "6.0.2",
     "@types/jest": "26.0.23",
     "@types/node": "15.12.2",
@@ -21,6 +22,7 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "27.0.4",
     "prettier": "2.3.1",
+    "rollup": "2.51.2",
     "ts-jest": "27.0.3",
     "ts-node": "10.0.0",
     "typescript": "4.3.2"
