--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "../tsconfig.json",
   "exclude": [],
   "compilerOptions": {
-    "noEmit": true
+    "esModuleInterop": true,
   }
 }
