--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "postinstall": "elm-tooling install",
     "start": "node server.js",
-    "build": "elm-watch make"
+    "build": "elm-watch make",
+    "watch": "elm-watch hot"
   },
   "devDependencies": {
     "elm-tooling": "1.3.0",
