--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cross-spawn": "6.0.2",
     "@types/jest": "26.0.23",
     "@types/node": "15.12.2",
+    "@types/ws": "7.4.5",
     "@typescript-eslint/eslint-plugin": "4.26.1",
     "@typescript-eslint/parser": "4.26.1",
     "elm-tooling": "1.3.0",
@@ -31,6 +32,7 @@
     "chokidar": "^3.5.2",
     "cross-spawn": "^7.0.3",
     "path-key": "^3.1.1",
-    "tiny-decoders": "^6.0.0"
+    "tiny-decoders": "^6.0.0",
+    "ws": "^7.5.0"
   }
 }
