--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           node-version: "${{ matrix.node-version }}"
 
+      - name: Number of CPUs
+        run: |
+          node -p 'require("os").cpus().length'
+
       - name: Cache node_modules
         id: cache-node_modules
         uses: actions/cache@v2
