Use bash on Windows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: "${{ matrix.node-version }}"
 
       - name: Number of CPUs
+        shell: bash
         run: |
           node -p 'require("os").cpus().length'
 
