--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,9 @@
   "devDependencies": {
     "elm-tooling": "1.3.0",
     "elm-watch": "file:../build",
+    "esbuild": "0.12.18",
     "express": "4.17.1",
-    "prettier": "2.3.0",
-    "uglify-js": "3.13.7"
+    "prettier": "2.3.2",
+    "uglify-js": "3.14.1"
   }
 }
