--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2019",
+    "useUnknownInCatchVariables": true,
     "lib": [
       "ES2019",
     ],
