--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-jest": "24.4.2",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "27.2.0",
+    "jest-environment-node-single-context": "27.2.0",
     "prettier": "2.4.1",
     "rollup": "2.56.3",
     "ts-jest": "27.0.5",
