--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "type": "commonjs",
   "scripts": {
     "postinstall": "elm-tooling install",
-    "pretest": "prettier --check . && eslint . --report-unused-disable-directives",
+    "pretest": "tsc && prettier --check . && eslint . --report-unused-disable-directives",
     "test": "jest --coverage",
     "posttest": "npm run build",
     "build": "ts-node scripts/Build.ts"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "8.2.5",
     "@types/cross-spawn": "6.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.9.3",
@@ -18,13 +17,13 @@
     "@typescript-eslint/eslint-plugin": "4.31.1",
     "@typescript-eslint/parser": "4.31.1",
     "elm-tooling": "1.6.0",
+    "esbuild": "^0.13.8",
     "eslint": "7.32.0",
     "eslint-plugin-jest": "24.4.2",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "27.2.5",
     "jest-environment-node-single-context": "27.2.0",
     "prettier": "2.4.1",
-    "rollup": "2.56.3",
     "ts-jest": "27.0.6",
     "ts-node": "10.2.1",
     "typescript": "4.4.3"
