--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "tsc && prettier --check . && eslint . --report-unused-disable-directives",
     "test": "jest --coverage",
     "posttest": "npm run build",
-    "build": "ts-node scripts/Build.ts"
+    "build": "ts-eager scripts/Build.ts"
   },
   "devDependencies": {
     "@types/cross-spawn": "6.0.2",
@@ -24,8 +24,8 @@
     "jest": "27.2.5",
     "jest-environment-node-single-context": "27.2.0",
     "prettier": "2.4.1",
+    "ts-eager": "^2.0.2",
     "ts-jest": "27.0.6",
-    "ts-node": "10.2.1",
     "typescript": "4.4.3"
   },
   "dependencies": {
