--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   "devDependencies": {
     "@types/cross-spawn": "6.0.2",
     "@types/jest": "27.0.2",
-    "@types/node": "16.9.3",
-    "@types/ws": "7.4.7",
+    "@types/node": "16.11.7",
+    "@types/ws": "8.2.0",
     "@typescript-eslint/eslint-plugin": "4.31.1",
     "@typescript-eslint/parser": "4.31.1",
     "elm-tooling": "1.6.0",
-    "esbuild": "^0.13.8",
+    "esbuild": "0.13.13",
     "eslint": "7.32.0",
     "eslint-plugin-jest": "24.4.2",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "globals": "13.10.0",
-    "jest": "27.2.5",
+    "globals": "13.12.0",
+    "jest": "27.3.1",
     "jest-environment-node-single-context": "27.2.0",
     "prettier": "2.4.1",
-    "ts-eager": "^2.0.2",
-    "ts-jest": "27.0.6",
-    "typescript": "4.4.3"
+    "ts-eager": "2.0.2",
+    "ts-jest": "27.0.7",
+    "typescript": "4.4.4"
   },
   "dependencies": {
     "chokidar": "^3.5.2",
