--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - uses: actions/setup-node@v1
         with:
