Remove legacy leftovers

--- a/.github/workflows/example-minimal.yml
+++ b/.github/workflows/example-minimal.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.elm
-          key: elm-${{ hashFiles('elm-tooling.json', 'example-minimal/elm.json', 'example-minimal/elm-tooling.json', 'example-minimal/legacy/elm.json') }}
+          key: elm-${{ hashFiles('elm-tooling.json', 'example-minimal/elm.json', 'example-minimal/elm-tooling.json') }}
 
       - name: npm ci
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
