--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.elm
-          key: elm-${{ hashFiles('elm-tooling.json', 'example/elm.json', 'example/elm-tooling.json', 'example/legacy/elm.json') }}
+          key: elm-${{ hashFiles('elm-tooling.json', 'example/elm.json', 'example/elm-tooling.json') }}
 
       - name: npm ci
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
@@ -67,4 +67,4 @@ jobs:
         run: npm run esbuild -- --minify
 
       - name: elm-format
-        run: npx --no-install elm-format --validate src legacy
+        run: npx --no-install elm-format --validate src
