--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.elm
-          key: elm-${{ hashFiles('elm-tooling.json', 'example/elm.json', 'example/elm-tooling.json') }}
+          key: elm-${{ hashFiles('example/elm.json', 'example/elm-tooling.json') }}
 
       - name: npm ci
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
