--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        # os: [ubuntu-latest, macOS-latest, windows-latest]
-        os: [macOS-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
         node-version: [12.x, 14.x, 16.x]
 
     steps:
