--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -61,9 +61,7 @@ jobs:
         run: npx --no-install elm-tooling install
 
       - name: elm-watch make
-        run: |
-          ls -lah node_modules/.bin
-          npx --no-install elm-watch make --optimize
+        run: npx --no-install elm-watch make --optimize
 
       - name: esbuild
         run: npm run esbuild -- --minify
