--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,4 +57,4 @@ jobs:
         working-directory: tests/install-packages
 
       - name: Jest
-        run: npx --no-install jest --coverage --runInBand
+        run: npx --no-install jest --coverage
