--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest] # TODO: Add `windows-latest` when Windows issues are fixed.
         node-version: [12.x, 14.x, 16.x]
 
     steps:
