Add Azimutt as example and improve proxying
The improved proxying means I didn’t have to make as many changes to the
Azimutt codebase, and could reduce the changes made to the other
submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "example/public/submodules/kite"]
 	path = example/public/submodules/kite
 	url = git@github.com:lydell/kite.git
+[submodule "example/public/submodules/azimutt"]
+	path = example/public/submodules/azimutt
+	url = git@github.com:lydell/azimutt.git
