Add `npm run start-production` to example for trying out prod builds

--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
     "postinstall": "elm-tooling install",
     "start": "run-pty % elm-watch hot % npm run esbuild -- --serve=9000 --servedir=public % node proxy.js 9000",
     "start-advanced": "run-pty run-pty.json",
+    "start-production": "run-pty % esbuild --serve=9000 --servedir=public % node proxy.js 9000",
     "build": "elm-watch make --optimize && npm run esbuild -- --minify",
     "esbuild": "esbuild app.ts public/submodules/codebase-ui/src/unisonShare.js --bundle --outdir=public/build --public-path=/build/ --loader:.svg=file --loader:.woff2=file"
   },
