--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "tsc && prettier --check . && eslint . --report-unused-disable-directives",
     "test": "jest --coverage",
     "posttest": "npm run build",
-    "build": "ts-eager scripts/Build.ts"
+    "build": "node -r esbuild-register scripts/Build.ts"
   },
   "devDependencies": {
     "@types/cross-spawn": "6.0.2",
@@ -18,13 +18,13 @@
     "@typescript-eslint/parser": "5.15.0",
     "elm-tooling": "1.7.0",
     "esbuild": "0.14.27",
+    "esbuild-register": "3.3.2",
     "eslint": "8.11.0",
     "eslint-plugin-jest": "26.1.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "globals": "13.13.0",
     "jest": "27.5.1",
     "prettier": "2.6.0",
-    "ts-eager": "2.0.2",
     "ts-jest": "27.1.3",
     "typescript": "4.6.2"
   },
