--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "eslint-plugin-jest": "26.2.2",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "globals": "13.15.0",
-    "jest": "27.5.1",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
     "prettier": "2.6.2",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.2",
     "typescript": "4.6.4"
   },
   "dependencies": {
