--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,18 +13,18 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [16.x]
+        node-version: [18]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: "${{ matrix.node-version }}"
 
       - name: Cache node_modules
         id: cache-node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: node_modules
           key: internal-node_modules-${{ matrix.os }}-${{ matrix.node-version }}-${{ hashFiles('package.json', 'package-lock.json') }}
@@ -36,10 +36,10 @@ jobs:
           NO_ELM_TOOLING_INSTALL: 1
 
       - name: TypeScript
-        run: npx --no-install tsc
+        run: npx tsc
 
       - name: ESLint
-        run: npx --no-install eslint --report-unused-disable-directives .
+        run: npx eslint --report-unused-disable-directives .
 
       - name: Prettier
-        run: npx --no-install prettier --check .
+        run: npx prettier --check .
