--- a/.github/workflows/example-minimal.yml
+++ b/.github/workflows/example-minimal.yml
@@ -15,22 +15,22 @@ jobs:
         working-directory: example-minimal
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18
 
       # Build elm-watch so we can use it in this example repo.
       - name: Internal cache node_modules
         id: internal-cache-node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: node_modules
-          key: internal-node_modules-ubuntu-latest-16.x-${{ hashFiles('package.json', 'package-lock.json') }}
+          key: internal-node_modules-ubuntu-latest-18-${{ hashFiles('package.json', 'package-lock.json') }}
       - name: Internal npm ci
         if: steps.internal-cache-node_modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: npm ci --no-audit
         working-directory: .
       - name: Internal build
         run: npm run build
@@ -38,13 +38,13 @@ jobs:
 
       - name: Cache node_modules
         id: cache-node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: example-minimal/node_modules
           key: node_modules-${{ hashFiles('example-minimal/package.json', 'example-minimal/package-lock.json') }}
 
       - name: Cache ~/.elm
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.elm
           key: elm-${{ hashFiles('example-minimal/elm.json', 'example-minimal/elm-tooling.json') }}
@@ -53,13 +53,13 @@ jobs:
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
         env:
           NO_ELM_TOOLING_INSTALL: 1
-        run: npm ci
+        run: npm ci --no-audit
 
       - name: elm-tooling install
-        run: npx --no-install elm-tooling install
+        run: npx elm-tooling install
 
       - name: elm-watch make
-        run: npx --no-install elm-watch make --optimize
+        run: npx elm-watch make --optimize
 
       - name: elm-format
-        run: npx --no-install elm-format --validate src
+        run: npx elm-format --validate src
