--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest] # TODO: Add `windows-latest` when Windows issues are fixed.
+        os: [ubuntu-latest, macOS-latest, windows-latest]
         node-version: [14, 16, 18]
 
     steps:
