Rename test fixtures

--- a/tests/fixtures/errors/elm-watch-stuff-json-is-folder/.gitignore
+++ b/tests/fixtures/errors/elm-watch-stuff-json-is-folder/.gitignore
@@ -1,2 +1,5 @@
 !elm-stuff/
-!elm-stuff/elm-watch-stuff.json/
+elm-stuff/*
+!elm-stuff/elm-watch/
+elm-stuff/elm-watch/*
+!elm-stuff/elm-watch/stuff.json
