--- a/tests/fixtures/errors/port-conflict-for-persisted-port/.gitignore
+++ b/tests/fixtures/errors/port-conflict-for-persisted-port/.gitignore
@@ -1,3 +1,5 @@
 !elm-stuff/
-!elm-stuff/elm-watch-stuff.json
-elm-stuff/0.19.*
+elm-stuff/*
+!elm-stuff/elm-watch/
+elm-stuff/elm-watch/*
+!elm-stuff/elm-watch/stuff.json
