--- a/tests/fixtures/hot/persisted-compilation-mode/.gitignore
+++ b/tests/fixtures/hot/persisted-compilation-mode/.gitignore
@@ -1,4 +1,5 @@
 !elm-stuff/
-!elm-stuff/elm-watch-stuff.json
-elm-stuff/0.19.*
-elm-stuff/elm-watch/
+elm-stuff/*
+!elm-stuff/elm-watch/
+elm-stuff/elm-watch/*
+!elm-stuff/elm-watch/stuff.json
