Only retry tests in CI
It was annoying locally.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,5 +64,8 @@ jobs:
 
       # Use `--forceExit` to avoid test runs “hanging” when tests are failing
       # so that elm-watch isn’t shut down properly.
+      # Retry failing tests, as a stopgap while fixing flaky tests.
       - name: Jest
         run: npx jest --coverage --forceExit
+        env:
+          JEST_RETRIES: 2
