Try without --runInBand again

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,6 +70,6 @@ jobs:
       # so that elm-watch isn’t shut down properly.
       # Retry failing tests, as a stopgap while fixing flaky tests.
       - name: Jest
-        run: npx jest --coverage --forceExit --runInBand
+        run: npx jest --coverage --forceExit
         env:
           JEST_RETRIES: 2
