--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "type": "commonjs",
   "scripts": {
     "postinstall": "elm-tooling install",
-    "pretest": "tsc && prettier --check . && eslint . --report-unused-disable-directives && node -r esbuild-register scripts/EnsureTestDependencies.ts",
+    "pretest": "run-pty --auto-exit % prettier --check . % eslint . --report-unused-disable-directives % tsc % node -r esbuild-register scripts/EnsureTestDependencies.ts % npm run build",
     "test": "jest --coverage",
-    "posttest": "npm run build",
     "build": "node -r esbuild-register scripts/Build.ts"
   },
   "devDependencies": {
@@ -26,6 +25,7 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.3",
     "prettier": "2.7.1",
+    "run-pty": "4.0.0",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
