--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "prettier": "2.8.3",
     "run-pty": "4.0.3",
     "ts-jest": "29.0.5",
-    "typescript": "4.9.4"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
     "cross-spawn": "^7.0.3",
+    "tiny-decoders": "^23.0.0",
     "ws": "^8.12.0"
   }
 }
