--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "postinstall": "elm-tooling install",
     "install-test-elm-dependencies": "node -r esbuild-register scripts/InstallTestDependencies.ts",
     "pretest": "run-pty --auto-exit % prettier --check . % eslint . --report-unused-disable-directives % tsc % node -r esbuild-register scripts/EnsureTestDependencies.ts % npm run build",
-    "test": "jest --coverage",
+    "test": "vitest --coverage",
     "build": "node -r esbuild-register scripts/Build.ts"
   },
   "devDependencies": {
     "@types/cross-spawn": "6.0.4",
-    "@types/jest": "29.5.7",
-    "@types/node": "20.8.10",
     "@types/ws": "8.5.8",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
@@ -20,15 +18,12 @@
     "esbuild": "0.15.18",
     "esbuild-register": "3.5.0",
     "eslint": "8.52.0",
-    "eslint-plugin-jest": "27.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "globals": "13.23.0",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "prettier": "2.8.3",
     "run-pty": "5.0.0",
-    "ts-jest": "29.1.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vitest": "2.1.1"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
