--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "elm-tooling install",
     "install-test-elm-dependencies": "node -r esbuild-register scripts/InstallTestDependencies.ts",
     "pretest": "run-pty --auto-exit % prettier --check . % eslint . --report-unused-disable-directives % tsc % node -r esbuild-register scripts/EnsureTestDependencies.ts % npm run build",
-    "test": "vitest --coverage",
+    "test": "vitest run --coverage",
     "build": "node -r esbuild-register scripts/Build.ts"
   },
   "devDependencies": {
@@ -14,6 +14,7 @@
     "@types/ws": "8.5.8",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
+    "@vitest/coverage-v8": "2.1.1",
     "elm-tooling": "1.15.0",
     "esbuild": "0.15.18",
     "esbuild-register": "3.5.0",
