--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,5 +63,6 @@ jobs:
         working-directory: tests/install-packages
 
       # Retry failing tests, as a stopgap while fixing flaky tests.
+      # However, retry is useless until this bug is fixed: https://github.com/vitest-dev/vitest/issues/6589
       - name: Vitest
-        run: npx vitest --coverage --retry=4
+        run: npx vitest --coverage # --retry=4
