Upgrade TypeScript and ESLint config

--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "devDependencies": {
     "@types/cross-spawn": "6.0.4",
     "@types/ws": "8.5.8",
-    "@typescript-eslint/eslint-plugin": "6.9.1",
-    "@typescript-eslint/parser": "6.9.1",
     "@vitest/coverage-v8": "2.1.1",
+    "@vitest/eslint-plugin": "1.1.4",
     "elm-tooling": "1.15.0",
     "esbuild": "0.15.18",
     "esbuild-register": "3.5.0",
-    "eslint": "8.52.0",
-    "eslint-plugin-simple-import-sort": "10.0.0",
-    "globals": "13.23.0",
+    "eslint": "9.11.1",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "globals": "15.9.0",
     "prettier": "3.3.3",
     "run-pty": "5.0.0",
-    "typescript": "5.2.2",
+    "typescript": "5.5.4",
+    "typescript-eslint": "8.7.0",
     "vitest": "2.1.1"
   },
   "dependencies": {
