--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,27 +13,24 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [20]
+        node-version: [22]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: "${{ matrix.node-version }}"
 
-      - name: Cache node_modules
+      - uses: actions/cache@v4
         id: cache-node_modules
-        uses: actions/cache@v3
         with:
           path: node_modules
           key: internal-node_modules-${{ matrix.os }}-${{ matrix.node-version }}-${{ hashFiles('package.json', 'package-lock.json') }}
 
-      - name: npm ci
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+      - if: steps.cache-node_modules.outputs.cache-hit != 'true'
         run: npm ci --no-audit
         env:
           NO_ELM_TOOLING_INSTALL: 1
 
-      - name: npm run pretest
-        run: npm run pretest
+      - run: npm run pretest
