--- a/.github/workflows/example-minimal.yml
+++ b/.github/workflows/example-minimal.yml
@@ -15,19 +15,19 @@ jobs:
         working-directory: example-minimal
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
       # Build elm-watch so we can use it in this example repo.
       - name: Internal cache node_modules
         id: internal-cache-node_modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: node_modules
-          key: internal-node_modules-ubuntu-latest-20-${{ hashFiles('package.json', 'package-lock.json') }}
+          key: internal-node_modules-ubuntu-latest-22-${{ hashFiles('package.json', 'package-lock.json') }}
       - name: Internal npm ci
         if: steps.internal-cache-node_modules.outputs.cache-hit != 'true'
         run: npm ci --no-audit
@@ -38,28 +38,24 @@ jobs:
 
       - name: Cache node_modules
         id: cache-node_modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: example-minimal/node_modules
           key: node_modules-${{ hashFiles('example-minimal/package.json', 'example-minimal/package-lock.json') }}
 
       - name: Cache ~/.elm
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.elm
           key: elm-${{ hashFiles('example-minimal/elm.json', 'example-minimal/elm-tooling.json') }}
 
-      - name: npm ci
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+      - if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        run: npm ci --no-audit
         env:
           NO_ELM_TOOLING_INSTALL: 1
-        run: npm ci --no-audit
 
-      - name: elm-tooling install
-        run: npx elm-tooling install
+      - run: npx elm-tooling install
 
-      - name: elm-watch make
-        run: npx elm-watch make --optimize
+      - run: npx elm-watch make --optimize
 
-      - name: elm-format
-        run: npx elm-format --validate src
+      - run: npx elm-format --validate src
