--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "9.11.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "globals": "15.9.0",
+    "jsdom": "25.0.1",
     "prettier": "3.3.3",
     "run-pty": "5.0.0",
     "typescript": "5.5.4",
