Fix TypeScript error in vitest.config.mts in VSCode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "client",
     "scripts",
     "tests/*.ts",
-    "eslint.config.mjs"
+    "eslint.config.mjs",
+    "vitest.config.mts"
   ]
 }
