--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "Preserve",
+    "moduleResolution": "Bundler",
     "checkJs": true,
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
@@ -13,7 +13,6 @@
     "noImplicitReturns": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
@@ -29,7 +28,7 @@
     "client",
     "scripts",
     "tests/*.ts",
-    "eslint.config.mjs",
-    "vitest.config.mts"
+    "eslint.config.js",
+    "vitest.config.ts"
   ]
 }
