Enable noPropertyAccessFromIndexSignature in tsconfig.json
I couldn’t make it work with the `@typescript-eslint/dot-notation` rule
in all cases, so I removed that rule.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
